<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0B0B">

    <Button
        android:id="@+id/blue"
        android:layout_width="165dp"
        android:layout_height="134dp"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="146dp"
        android:onClick="playBlue"
        app:backgroundTint="#314CE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/green"
        android:layout_width="165dp"
        android:layout_height="134dp"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="328dp"
        android:onClick="playGreen"
        app:backgroundTint="#1EA824"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/red"
        android:layout_width="165dp"
        android:layout_height="134dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="146dp"
        android:onClick="playRed"
        app:backgroundTint="#F31731"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="165dp"
        android:layout_height="134dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="328dp"
        android:onClick="playYellow"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/maingameimgview"
        android:layout_width="194dp"
        android:layout_height="145dp"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="462dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/yellow" />

    <TextView
        android:id="@+id/level"
        android:layout_width="327dp"
        android:layout_height="72dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="614dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="#F174F1"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="665dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="31dp"
        android:text="@string/app_by_anu"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        android:layout_gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>